--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/fonts"
+              "src/fonts",
+              "src/app/icons"
             ],
             "styles": [
               "src/styles.scss"
